[package]
name = "ms5611"
version = "1.0.0"
authors = ["Ken Elkabany <ken@elkabany.com>"]
license = "MIT"
description = "Library for the MS5611 barometric pressure sensor."
repository = "https://github.com/braincore/ms5611-rs"
keywords = ["ms5611"]
readme = "README.md"

[dependencies]
byteorder = "1.1.0"
i2cdev = "0.3.1"
