[package]
name = "ms5611"
version = "1.0.0"
authors = ["Ken Elkabany <ken@elkabany.com>"]
license = "MIT"
description = "Library for the MS5611 barometric pressure sensor."
repository = "https://github.com/braincore/ms5611-rs"
keywords = ["ms5611"]
edition = "2018"
readme = "README.md"

[dependencies]
embedded-hal = "0.2.2"
byteorder = "1.1.0"

[dev-dependencies]
linux-embedded-hal = "0.2.2"
